--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>ng-autocomplete Demo<</title>
+        <title>ng-autocomplete Demo</title>
         <link rel="stylesheet" href="../src/autocomplete.css">
         <link rel="stylesheet" href="styles/main.css">
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
